--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terminal_components",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A set of React components for building terminal-like interfaces",
   "author": "Roman Tovt <romantovt31@gmail.com>",
   "license": "MIT",
@@ -11,6 +11,10 @@
   "workspaces": [
     "example",
     "package"
+  ],
+  "files": [
+    "package/dist",
+    "package/src"
   ],
   "scripts": {
     "package:build": "yarn workspace package rollup -c --bundleConfigAsCjs",
